--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,15 @@ body {
     display: none;
 }
 
+#error-message {
+    color: red;
+    order: 4;
+    font-weight: 800;
+    font-size: 12px;
+
+}
+
+
 .main-container {
     
     .content {
@@ -90,6 +99,23 @@ body {
                 border: none;
             }
 
+            input:-webkit-autofill,
+            input:-webkit-autofill:hover, 
+            input:-webkit-autofill:focus,
+            textarea:-webkit-autofill,
+            textarea:-webkit-autofill:hover,
+            textarea:-webkit-autofill:focus,
+            select:-webkit-autofill,
+            select:-webkit-autofill:hover,
+            select:-webkit-autofill:focus {
+            
+            -webkit-text-fill-color: white;
+            -webkit-box-shadow: 0 0 0px 1000px #2C344B inset;
+            transition: background-color 5000s ease-in-out 0s;
+            }
+
+
+
             .content__input {
                 padding-left: 20px;
                 margin-bottom: 16px;
@@ -158,8 +184,9 @@ body {
                 order: 3;
                 flex-direction: row;
                 width: 65%;
+                max-width: 455px;
                 position: relative;
-                margin-bottom: 63px;
+                margin-bottom: 0;
 
                 .content__input {
                     margin: 0;
@@ -167,6 +194,7 @@ body {
 
                     &::placeholder {
                         font-weight: 600;
+                        color: #FFF;
                     }
                 }
 
@@ -179,8 +207,9 @@ body {
             }
 
             &__icons {
-                order: 4;
+                order: 5;
                 height: 29px;
+                margin-top: 63px;
 
                 img {
                     height: 100%;
